[gd_scene load_steps=4 format=2]

[ext_resource path="res://entities/static/cam.png" type="Texture" id=1]
[ext_resource path="res://entities/static/cam.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 24.6222, 51.5999 )

[node name="Camera" type="StaticBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.152975, 0.0478199 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="RayCastMid" type="RayCast2D" parent="."]
scale = Vector2( 0.125, 0.125 )
enabled = true
cast_to = Vector2( 1500, 0 )

[node name="RayCastBot" type="RayCast2D" parent="."]
scale = Vector2( 0.125, 0.125 )
enabled = true
cast_to = Vector2( 1500, 250 )

[node name="RayCastTop" type="RayCast2D" parent="."]
scale = Vector2( 0.125, 0.125 )
enabled = true
cast_to = Vector2( 1500, -250 )
